@@ -943,6 +943,7 @@ DRIVERNV(corsario)      //Corsario (1989)
 DRIVERNV(corsarfp)      //Corsario (Free Play)
 DRIVERNV(mundial )      //Mundial 90 (1990)
 DRIVERNV(mundiafp)      //Mundial 90 (Free Play)
+DRIVERNV(larana  )      //La Rana (1990)
 DRIVERNV(atleta  )      //Atleta (1991)
 DRIVERNV(ind250cc)      //250 CC (1992)
 DRIVERNV(metalman)      //Metal Man (1992)
